[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-tab-tutor"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=4.44.1",
    "jupyter>=1.1.1",
    "openai>=1.68.2",
]

[project.optional-dependencies]
dev = []
